--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,18 @@
     <title>Solène & Florent</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preload" 
+    as="style"
+    onload="this.rel='stylesheet'"
+    href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
+    <link rel="preload" 
+    as="style"
+    onload="this.rel='stylesheet'"
+    href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap">
+    <link rel="preload"
+    as="style"
+    onload="this.rel='stylesheet'"
+    href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap">
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
